[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sounds/Music/kazoo_apocalypse.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Game/SoundSystem/SoundSystem.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/SFX/heavy_step2.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/SFX/sfx2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/SFX/sfx4.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/SFX/sfx1.ogg" type="AudioStream" id=6]

[node name="SoundSystem" type="Spatial"]
script = ExtResource( 2 )

[node name="ASPMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -38.455
autoplay = true

[node name="ASPWalkSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -28.84
pitch_scale = 2.79

[node name="ASPPickupPurpleSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -33.072

[node name="ASPPickupGreenSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -33.072

[node name="ASPDamagedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -28.84
pitch_scale = 2.79
